Make sure buttons are centered on iOS

--- a/contribs/gmf/less/mobile.less
+++ b/contribs/gmf/less/mobile.less
@@ -23,6 +23,7 @@ main>* {
 main button {
   height: @map-tools-size;
   width: @map-tools-size;
+  padding: 0;
 }
 
 gmf-map {
